# python-flask

./: sample.http
.docker/: docker-compose.yml  sample.env
.docker/develop/: Dockerfile
.docker/product/: Dockerfile
app/: alembic.ini  config.py  main.py  pyproject.toml  setup.py  uwsgi.ini
app/alembic/: env.py
app/alembic/versions/: 20200427-2216_added_files_users_tables.py  20200429-0330_added_filedetais_table.py  20200502-1927_added_account_table.py  20200502-1927_added_not_null_constraint.py
app/api/: route.py
app/api/requests/classes/: __init__.py  file.py  file_detail.py
app/api/requests/factories/: __init__.py  file.py  file_detail.py
app/api/responses/: errors.py
app/api_requests/classes/: __init__.py  file.py  file_detail.py
app/api_requests/factories/: __init__.py  file.py  file_detail.py
app/controllers/: __init__.py  file.py
app/database/: setting.py
app/database/factories/: __init__.py  file.py  file_ditails.py  user.py
app/database/models/: ModelFile.py  ModelUser.py  __init__.py  base.py  file.py  file_ditails.py  setting.py  user.py
app/resources/message/: error.py
app/services/: file.py
tests/: conftest.py  pytest.ini
tests/controllers/: test_files.py
