[tool.poetry]
name = "python-flask"
version = "0.1.0"
description = ""
authors = ["yuki"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
SQLAlchemy = "^1.3.16"
alembic = "^1.4.2"
factory-boy = "^2.12.0"
marshmallow = "^3.5.1"
marshmallow-dataclass = "^7.5.1"
dataclasses-json = "^0.4.2"
uwsgi = "^2.0.18"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.4.1"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
